# PartsDecompWorkshop

Dependencies/: checkAndRepairMesh.m  contSmooth.m  decimateMesh.m  getStepVectors.m  isoSwitch.m  meshGaussian.m  obtainSubMesh.m  removeSmallMeshes.m  removeSmallObjects.m  resampleVoxelDimensions.m  triangulation2adjacency.m
Dependencies/CppFunctions/: decimate_cgal.mexa64
Dependencies/PartsDecompositionCode/: buildRegionList.m  eraser.m  listefy.m  (+7 more)
Tools/OldSkeltools/: .gitignore  CMakeLists.txt  README.md  main.cpp  versionfix.patch
Tools/OldSkeltools/include/: itkAnchoredMedialCurveImageFilter.h  itkAnchoredMedialCurveImageFilter.hxx  itkAverageOutwardFluxImageFilter.h  itkAverageOutwardFluxImageFilter.hxx  itkAverageOutwardFluxImageFilter2.h  itkAverageOutwardFluxImageFilter2.hxx  itkAverageOutwardFluxImageFilter3.h  itkAverageOutwardFluxImageFilter3.hxx  itkCommandLineArgumentParser.h  itkMedialCurveImageFilter.h  itkMedialCurveImageFilter.hxx  itkMedialSurfaceImageFilter.h  itkMedialSurfaceImageFilter.hxx  itkPostProcessSkeleton.h  itkPostProcessSkeleton.hxx  itkTopologyPreservingThinningBase.h  itkTopologyPreservingThinningBase.hxx  medial.h  medial.hxx  topology.h  topology.hxx  utils.h  utils.hxx
Tools/OldSkeltools/results/: approxMedialSurfaceBefore.tif  medialSurfaceThreshold.tif
Tools/OldSkeltools/results/dinosaur/: approxMedialSurfaceBefore.tif  medialSurfaceThreshold.tif
Tools/OldSkeltools/samples/: chair.tif  dinosaur.tif  loopy.tif  octopus.tif  snake.tif
Tools/OldSkeltools/src/: itkCommandLineArgumentParser.cxx  medial.cpp  topology.cpp
(+25 files in other folders)
